RESOLVED FIXED231898
Regression (r284304) : [ iOS 15 Release ] http/tests/privateClickMeasurement tests are failing
https://bugs.webkit.org/show_bug.cgi?id=231898
Summary Regression (r284304) : [ iOS 15 Release ] http/tests/privateClickMeasurement ...
ayumi_kojima
Reported 2021-10-18 09:00:09 PDT
http/tests/privateClickMeasurement tests are constantly failing on iOS 15 Release. http/tests/privateClickMeasurement/attribution-conversion-through-cross-site-image-redirect.html http/tests/privateClickMeasurement/attribution-conversion-through-fetch-keepalive.html http/tests/privateClickMeasurement/attribution-conversion-through-image-redirect-ephemeral.html http/tests/privateClickMeasurement/attribution-conversion-through-image-redirect-in-new-window.html http/tests/privateClickMeasurement/attribution-conversion-through-image-redirect-with-priority.html http/tests/privateClickMeasurement/attribution-conversion-through-image-redirect-without-priority.html http/tests/privateClickMeasurement/clear-through-website-data-removal.html http/tests/privateClickMeasurement/conversion-disabled-in-ephemeral-session.html http/tests/privateClickMeasurement/expired-ad-click-gets-removed-on-session-start.html http/tests/privateClickMeasurement/expired-attribution-report-gets-sent-on-session-start.html http/tests/privateClickMeasurement/expired-attributions-removed.html http/tests/privateClickMeasurement/multiple-app-bundle-ids.html http/tests/privateClickMeasurement/private-click-measurement-with-source-nonce-null-content.html http/tests/privateClickMeasurement/private-click-measurement-with-source-nonce-wrong-content-type.html http/tests/privateClickMeasurement/second-attribution-converted-with-higher-priority.html http/tests/privateClickMeasurement/second-attribution-converted-with-lower-priority.html http/tests/privateClickMeasurement/second-conversion-with-higher-priority.html http/tests/privateClickMeasurement/second-conversion-with-lower-priority.html http/tests/privateClickMeasurement/send-attribution-conversion-request.html http/tests/privateClickMeasurement/store-private-click-measurement-nested.html http/tests/privateClickMeasurement/store-private-click-measurement-with-source-nonce.html http/tests/privateClickMeasurement/store-private-click-measurement.html Result page: https://build.webkit.org/results/Apple-iOS-15-Simulator-Release-WK2-Tests/r284348%20(210)/results.html# History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Ftests%2FprivateClickMeasurement%2Fattribution-conversion-through-cross-site-image-redirect.html&test=http%2Ftests%2FprivateClickMeasurement%2Fattribution-conversion-through-fetch-keepalive.html&test=http%2Ftests%2FprivateClickMeasurement%2Fattribution-conversion-through-image-redirect-ephemeral.html&test=http%2Ftests%2FprivateClickMeasurement%2Fattribution-conversion-through-image-redirect-in-new-window.html&test=http%2Ftests%2FprivateClickMeasurement%2Fattribution-conversion-through-image-redirect-with-priority.html&test=http%2Ftests%2FprivateClickMeasurement%2Fattribution-conversion-through-image-redirect-without-priority.html&test=http%2Ftests%2FprivateClickMeasurement%2Fclear-through-website-data-removal.html&test=http%2Ftests%2FprivateClickMeasurement%2Fconversion-disabled-in-ephemeral-session.html&test=http%2Ftests%2FprivateClickMeasurement%2Fexpired-ad-click-gets-removed-on-session-start.html&test=http%2Ftests%2FprivateClickMeasurement%2Fexpired-attribution-report-gets-sent-on-session-start.html&test=http%2Ftests%2FprivateClickMeasurement%2Fexpired-attributions-removed.html&test=http%2Ftests%2FprivateClickMeasurement%2Fmultiple-app-bundle-ids.html&test=http%2Ftests%2FprivateClickMeasurement%2Fprivate-click-measurement-with-source-nonce-null-content.html&test=http%2Ftests%2FprivateClickMeasurement%2Fprivate-click-measurement-with-source-nonce-wrong-content-type.html&test=http%2Ftests%2FprivateClickMeasurement%2Fsecond-attribution-converted-with-higher-priority.html&test=http%2Ftests%2FprivateClickMeasurement%2Fsecond-attribution-converted-with-lower-priority.html&test=http%2Ftests%2FprivateClickMeasurement%2Fsecond-conversion-with-higher-priority.html&test=http%2Ftests%2FprivateClickMeasurement%2Fsecond-conversion-with-lower-priority.html&test=http%2Ftests%2FprivateClickMeasurement%2Fsend-attribution-conversion-request.html&test=http%2Ftests%2FprivateClickMeasurement%2Fstore-private-click-measurement-nested.html&test=http%2Ftests%2FprivateClickMeasurement%2Fstore-private-click-measurement-with-source-nonce.html&test=http%2Ftests%2FprivateClickMeasurement%2Fstore-private-click-measurement.html Diff: --- /Volumes/Data/worker/ios-simulator-15-release-tests-wk2/build/layout-test-results/http/tests/privateClickMeasurement/attribution-conversion-through-cross-site-image-redirect-expected.txt +++ /Volumes/Data/worker/ios-simulator-15-release-tests-wk2/build/layout-test-results/http/tests/privateClickMeasurement/attribution-conversion-through-cross-site-image-redirect-actual.txt @@ -1,10 +1,3 @@ Tests that triggering of private click measurement attributions through cross-site redirects do not work. -Unattributed Private Click Measurements: -WebCore::PrivateClickMeasurement 1 -Source site: 127.0.0.1 -Attribute on site: localhost -Source ID: 3 -No attribution trigger data. -Application bundle identifier: org.webkit.WebKitTestRunnerApp
Attachments
Radar WebKit Bug Importer
Comment 1 2021-10-18 09:04:58 PDT
ayumi_kojima
Comment 2 2021-10-18 09:09:25 PDT
I was able to reproduce the failure with run-webkit-tests --ios-simulator http/tests/privateClickMeasurement/attribution-conversion-through-fetch-keepalive.html
Alex Christensen
Comment 3 2021-10-18 09:11:50 PDT
Note You need to log in before you can comment on or make changes to this bug.