Regression (r284304) : [ iOS 15 Release ] http/tests/privateClickMeasurement tests are failing https://bugs.webkit.org/show_bug.cgi?id=231898

Use the SPI I made to keep the tests having old behavior of using the network process instead of the daemon.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::configureWebsiteDataStoreTemporaryDirectories):



Canonical link: https://commits.webkit.org/243160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284376 268f45cc-cd09-0410-ab3c-d52691b4dbfc